--- a/Changes
+++ b/Changes
@@ -1,4 +1,8 @@
 Revision history for Perl extension Text::Emoticon::MSN
 
+0.02  Sun May 29 14:55:19 JST 2005
+        * Added 'strict' option
+          (Thanks to Marcus Ramberg)
+
 0.01  Fri Mar 26 18:22:38 2004
 	- original version
