update so it uses 0.03 API

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Text::Emoticon::MSN
 
+0.03  Wed Jan 11 10:17:37 UTC 2006
+        - Now it requires Text::Emoticon 0.03
+        - Use MSN site as a default imgbase now
+
 0.02  Sun May 29 14:55:19 JST 2005
         * Added 'strict' option
           (Thanks to Marcus Ramberg)
