--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Text::Emoticon::MSN
 
+0.04  Wed Jan 11 10:33:35 UTC 2006
+        - Oops, fixed the typo in imgbase default URL
+
 0.03  Wed Jan 11 10:17:37 UTC 2006
         - Now it requires Text::Emoticon 0.03
         - Use MSN site as a default imgbase now
